--- a/app/src/main/res/layout/fragment_coin_list.xml
+++ b/app/src/main/res/layout/fragment_coin_list.xml
@@ -8,12 +8,26 @@
 		android:padding="16dp">
 
 		<TextView
-			android:id="@+id/content"
+			android:id="@+id/coin"
 			android:layout_width="match_parent"
-			android:layout_height="0dp"
+			android:layout_height="wrap_content"
+			android:textColor="@color/white"
+			app:layout_constraintVertical_chainStyle="packed"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toTopOf="@+id/coin_info"
+			/>
+
+
+		<TextView
+			android:id="@+id/coin_info"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="24dp"
+			app:layout_constraintVertical_chainStyle="packed"
+			app:layout_constraintTop_toBottomOf="@+id/coin"
 			android:textColor="@color/white"
 			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintTop_toTopOf="parent" />
+			/>
 
 		<TextView
 			android:id="@+id/errorMessage"
